--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a doctoral researcher in linguistics at Northwestern University with interests in formal (morpho-)syntactic theory and East Asian languages.
-									Besides my research, I serve as a teaching assistant for undergraduate linguisics courses, and I'm also an ESL instructor teaching graduate courses at the 
-									Northwestern English Language Programs.<br><br>
+									I'm a doctoral researcher in linguistics at Northwestern University with interests in formal (morpho-)syntactic theory and East Asian languages. When appropriate,
+									I also apply (computational) psycholinguistic methods to questions in these areas. Besides my research, I serve as a teaching assistant for undergraduate linguisics courses
+									and instruct ESL graduate courses at the Northwestern English Language Programs.<br><br>
 									
 									Outside of work, I love interacting in the languages I study. For the past few years, I've been most captured by
 									Mandarin, Japanese, and Korean. However, in the past, I've had much experience with German, Italian, Russian, and Swedish.
