--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a doctoral researcher in linguistics at Northwestern University with interests in formal (morpho-)syntactic theory and East Asian languages. When appropriate,
-									I also apply (computational) psycholinguistic methods to questions in these areas. Besides my research, I serve as a teaching assistant for undergraduate linguisics courses
+									I'm a doctoral researcher in linguistics at Northwestern University with main interests in formal (morpho-)syntactic theory and East Asian languages. I also 
+									interact with work in computational psycholinguistics. Besides my research, I serve as a teaching assistant for undergraduate linguisics courses
 									and instruct ESL graduate courses at the Northwestern English Language Programs.<br><br>
 									
 									Outside of work, I love interacting in the languages I study. For the past few years, I've been most captured by
