--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a doctoral researcher in linguistics at Northwestern University with main interests in formal (morpho-)syntactic theory and East Asian languages. I also 
-									interact with work in computational psycholinguistics. Besides my research, I serve as a teaching assistant for undergraduate linguisics courses
-									and instruct ESL graduate courses at the Northwestern English Language Programs.<br><br>
+									I'm a doctoral researcher and course instructor in linguistics at Northwestern University. My background is in both computer science and linguistics, and I received my master's degree from University of Washington and my
+									bachelor's from University of Wisconsin-Madison. My main research interests are in formal syntactic and morphological theory, as well as East Asian languages. I also 
+									do some work in computational psycholinguistics. 
 									
-									Outside of work, I love interacting in the languages I study. For the past few years, I've been most captured by
-									Mandarin, Japanese, and Korean. However, in the past, I've had much experience with German, Italian, Russian, and Swedish.
-									Last but not least, I really enjoy engaging with music (eg., jazz, flamenco, etc.), mathematics, cooking, and PC games. 
+									Outside of work, I love learning and interacting in languages other than English (esp. Chinese, Japanese, Swedish), engaging with music (e.g., jazz, flamenco, etc.),
+									improving my computer hacking/security skills, cooking, and PC gaming.
 								</p>
 							</article>
 
