--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 									do some work in computational psycholinguistics. 
 									
 									Outside of work, I love learning and interacting in languages other than English (esp. Chinese, Japanese, Swedish), engaging with music (e.g., jazz, flamenco, etc.),
-									improving my computer hacking/security skills, cooking, and PC gaming.
+									improving my computer hacking/security skills, and PC gaming.
 								</p>
 							</article>
 
