--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Devin Johnson (張旭堯)</title>
+		<title>Devin Johnson</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link type="image/png" sizes="16x16" rel="icon" href="images/favicon.png">
