--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Devin Johnson</title>
+		<title>Devin Jonssön</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link type="image/png" sizes="16x16" rel="icon" href="images/favicon.png">
@@ -20,7 +20,8 @@
 					<header id="header">
 						<div class="content">
 							<div class="inner">
-								<h1>Devin Johnson</h1><br>
+								<h1>Devin Jonssön</h1><br>
+								<h1>張旭堯</h1><br>
 								<p>Doctoral Researcher, Instructor</p>
 								<p>Northwestern University</p>
 							</div>
