--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<div class="inner">
 								<h1>Devin Jonssön</h1><br>
 								<h1>張旭堯</h1><br>
-								<p>Doctoral Researcher, Instructor</p>
+								<p>Linguist - Researcher - Instructor</p>
 								<p>Northwestern University</p>
 							</div>
 						</div>
@@ -44,12 +44,16 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a doctoral researcher and course instructor in linguistics at Northwestern University. My background is in both computer science and linguistics, and I received my master's degree from University of Washington and my
-									bachelor's from University of Wisconsin-Madison. My main research interests are in formal syntactic and morphological theory, as well as East Asian languages. I also 
-									do some work in computational psycholinguistics. 
+									I'm a doctoral researcher and instructor in linguistics at Northwestern University. My background is in both computer science and linguistics, and I received my master's degree from University of Washington and my
+									bachelor's from University of Wisconsin-Madison. <br><br>
 									
-									Outside of work, I love learning and interacting in languages other than English (esp. Chinese, Japanese, Swedish), engaging with music (e.g., jazz, flamenco, etc.),
-									improving my computer hacking/security skills, and PC gaming.
+									My main research interests can, very broadly, be summed up by the following: <b>What is language and what is it for?</b> To answer these questions, it seems, requires one to look in
+									many places. In regard to the "what",  I focus on formal syntactic and morphological theory, analyzing word formation and sentence structure mostly in English and Japanese. As for the "what for", 
+									I focus on what human activities language (seen as both a biological and computational system) is optimized for, which brings me into areas such as 
+									information theory, computational theory and psycholinguistics. <br><br>
+									
+									Outside of work, I love learning more about languages and culture (e.g., Chinese, Japanese, Swedish), engaging with music (e.g., jazz, flamenco, etc.),
+									computer hacking/tinkering, and PC gaming.
 								</p>
 							</article>
 
