--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 									I focus on what human activities language (seen as both a biological and computational system) is optimized for, which brings me into areas such as 
 									information theory, computational theory and psycholinguistics. <br><br>
 									
-									Outside of work, I love learning more about languages and culture (e.g., Chinese, Japanese, Swedish), engaging with music (e.g., jazz, flamenco, etc.),
-									computer hacking/tinkering, and PC gaming.
+									Outside of work, I love learning more about languages and cultures (e.g., Chinese, Japanese, Swedish), engaging with music (e.g., jazz, flamenco, etc.),
+									computer hacking, and PC gaming.
 								</p>
 							</article>
 
