--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Devin Jonssön</title>
+		<title>Devin Johnson</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link type="image/png" sizes="16x16" rel="icon" href="images/favicon.png">
@@ -20,7 +20,7 @@
 					<header id="header">
 						<div class="content">
 							<div class="inner">
-								<h1>Devin Jonssön</h1><br>
+								<h1>Devin Johnson</h1><br>
 								<h1>張旭堯</h1><br>
 								<p>Linguist - Researcher - Instructor</p>
 								<p>Northwestern University</p>
@@ -52,7 +52,7 @@
 									I focus on what human activities language (seen as both a biological and computational system) is optimized for, which brings me into areas such as 
 									information theory, computational theory and psycholinguistics. <br><br>
 									
-									Outside of work, I love learning more about languages and cultures (e.g., Chinese, Japanese, Swedish), engaging with music (e.g., jazz, flamenco, etc.),
+									Outside of work, I love learning more about languages and cultures (e.g., Chinese, Japanese, etc.), engaging with music (e.g., jazz, flamenco, etc.),
 									computer hacking, and PC gaming.
 								</p>
 							</article>
