--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 									bachelor's from University of Wisconsin-Madison. <br><br>
 									
 									My main research interests can, very broadly, be summed up by the following: <b>What is language and what is it for?</b> To answer these questions, it seems, requires one to look in
-									many places. In regard to the "what",  I focus on formal syntactic and morphological theory, analyzing word formation and sentence structure mostly in English and Japanese. As for the "what for", 
+									many places. In regard to the "what",  I focus on formal syntactic and morphological theory, analyzing word formation and sentence structure mostly in English, Japanese, and Korean as of late. As for the "what for", 
 									I focus on what human activities language (seen as both a biological and computational system) is optimized for, which brings me into areas such as 
 									information theory, computational theory and psycholinguistics. <br><br>
 									
-									Outside of work, I love learning more about languages and cultures (e.g., Chinese, Japanese, etc.), engaging with music (e.g., jazz, flamenco, etc.),
+									Outside of work, I love learning more about languages and cultures, engaging with music (esp. jazz, flamenco, etc.),
 									computer hacking, and PC gaming.
 								</p>
 							</article>
