--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 									bachelor's from University of Wisconsin-Madison. <br><br>
 									
 									My main research interests can, very broadly, be summed up by the following: <b>What is language and what is it for?</b> To answer these questions, it seems, requires one to look in
-									many places. In regard to the "what",  I focus on formal syntactic and morphological theory, analyzing word formation and sentence structure mostly in English, Japanese, and Korean as of late. As for the "what for", 
+									many places. In regard to the "what",  I focus on formal syntactic and morphological theory, analyzing word formation and sentence structure. As for the "what for", 
 									I focus on what human activities language (seen as both a biological and computational system) is optimized for, which brings me into areas such as 
 									information theory, computational theory and psycholinguistics. <br><br>
 									
