--- a/index.html
+++ b/index.html
@@ -48,13 +48,8 @@
 									I'm a doctoral researcher and instructor in linguistics at Northwestern University. My background is in both computer science and linguistics, and I received my master's degree from University of Washington and my
 									bachelor's from University of Wisconsin-Madison. <br><br>
 									
-									My main research interests can, very broadly, be summed up by the following: <b>What is language and what is it for?</b> To answer these questions, it seems, requires one to look in
-									many places. In regard to the "what",  I focus on formal syntactic and morphological theory, analyzing word formation and sentence structure. As for the "what for", 
-									I focus on what human activities language (seen as both a biological and computational system) is optimized for, which brings me into areas such as 
-									information theory, computational theory and psycholinguistics. <br><br>
-									
-									Outside of work, I love learning more about languages and cultures, engaging with music (esp. jazz, flamenco, etc.),
-									computer hacking, and PC gaming.
+									My main research interests focus on formal syntactic and morphological theory, analyzing word formation and sentence structure mainly in English and East-Asian languages (Japanese, Chinese, Korean).							
+									Outside of work, I love learning more about languages and cultures, engaging with music (esp. jazz, flamenco, etc.), computer hacking, and PC gaming.
 								</p>
 							</article>
 
