--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									I'm a doctoral researcher and instructor in linguistics at Northwestern University. My background is in both computer science and linguistics, and I received my master's degree from University of Washington and my
 									bachelor's from University of Wisconsin-Madison. <br><br>
 									
-									My main research interests focus on formal syntactic and morphological theory, analyzing word formation and sentence structure mainly in English and East-Asian languages (Japanese, Chinese, Korean).							
+									My main research interests focus on formal syntactic and morphological theory, analyzing word formation and sentence structure mainly in English and East Asian languages (Japanese, Chinese, Korean).							
 									Outside of work, I love learning more about languages and cultures, engaging with music (esp. jazz, flamenco, etc.), computer hacking, and PC gaming.
 								</p>
 							</article>
