--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									
 									My main research interests focus on formal syntactic and morphological theory, analyzing word formation and sentence structure mainly in English and East Asian languages (Japanese, Chinese, Korean).	
 									Beside this, I also work on questions in sentence processing, trying to better understand how the human sentence parser can be computationally modeled.				
-									Outside of work, I love learning more about languages and cultures, music (esp. jazz, flamenco, etc.), and PC gaming.
+									Outside of work, I love learning more about languages and cultures, music (esp. jazz, flamenco, etc.), playing around with C and assembly language , hacking, and PC gaming.
 								</p>
 							</article>
 
