--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a doctoral researcher and instructor in linguistics at Northwestern University. My background is in both computer science and linguistics, and I received my master's degree from University of Washington and my
+									I'm a researcher in the SSS (Syntax, Semantics, Sentence Processing) Lab and an instructor in linguistics at Northwestern University. 
+									My background is in both computer science and linguistics, having received my master's degree from University of Washington and my
 									bachelor's from University of Wisconsin-Madison. <br><br>
 									
-									My main research interests focus on formal syntactic and morphological theory, analyzing word formation and sentence structure mainly in English and East Asian languages (Japanese, Chinese, Korean).	
-									Beside this, I also work on questions in sentence processing, trying to better understand how the human sentence parser can be computationally modeled.				
-									Outside of work, I love learning more about languages and cultures, listening to music (esp. jazz, flamenco, etc.), and playing PC games. 
+									My main research interests are in psycholinguistics (e.g., sentence processing) and the formal (morpho-)syntactic theory of Japanese and Korean.
+									Beside this, I also enjoy studying east-asian history, particularly early-modern onward. Outside of work, I love listening to music (esp. jazz, flamenco, etc.)
+									and	playing PC games.
 								</p>
 							</article>
 
