--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									bachelor's from University of Wisconsin-Madison. <br><br>
 									
 									My main research interests are in psycholinguistics (e.g., sentence processing) and the formal (morpho-)syntactic theory of Japanese and Korean.
-									Beside this, I also enjoy studying east-asian history, particularly military history from early-modern onward. Outside of work, I love listening to music (esp. jazz, flamenco, etc.)
+									Beside this, I also enjoy studying east-asian (mostly military) history. Outside of work, I love listening to music (esp. jazz, flamenco, etc.)
 									and	playing PC games.
 								</p>
 							</article>
