--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a researcher in the SSS (Syntax, Semantics, Sentence Processing) Lab and an instructor in linguistics at Northwestern University. 
+									I'm a researcher and instructor in linguistics at Northwestern University. 
 									My background is in both computer science and linguistics, having received my master's degree from University of Washington and my
 									bachelor's from University of Wisconsin-Madison. <br><br>
 									
-									My main research interests are in psycholinguistics (e.g., sentence processing) and the formal (morpho-)syntactic theory of Japanese and Korean.
+									My main research interests are in (morpho-)syntactic theory of Japanese, Korean, and Chinese.
 									Beside this, I also enjoy studying east-asian (mostly military) history. Outside of work, I love listening to music (esp. jazz, flamenco, etc.)
 									and	playing PC games.
 								</p>
