--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 									My background is in both computer science and linguistics, having received my master's degree from University of Washington and my
 									bachelor's from University of Wisconsin-Madison. <br><br>
 									
-									My main research interests are in (morpho-)syntactic theory of Japanese, Korean, and Chinese.
-									Beside this, I also enjoy studying east-asian (mostly military) history. Outside of work, I love listening to music (esp. jazz, flamenco, etc.)
+									My main research interests are in sentence processing and (morpho-)syntactic theory of Japanese, Korean, and Chinese.
+									Beside this, I also enjoy studying east-asian history, mostly from early modern onward. Outside of work, I love listening to music (esp. jazz, flamenco, etc.)
 									and	playing PC games.
 								</p>
 							</article>
