--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <html>
 	<head>
 		<title>Devin Johnson</title>
-		
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link type="image/png" sizes="16x16" rel="icon" href="images/favicon.png">
@@ -50,8 +49,7 @@
 									bachelor's from University of Wisconsin-Madison. <br><br>
 									
 									My main research interests are in sentence processing and (morpho-)syntactic theory of Japanese, Korean, and Chinese.
-									Beside this, I also enjoy studying east-asian history, mostly from early modern onward. Outside of work, I love listening to music (esp. jazz, flamenco, etc.)
-									and	playing PC games.
+									Outside of work, I love listening to music (esp. jazz, flamenco, etc.)	and	playing PC games.
 								</p>
 							</article>
 
