--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 									My background is in both computer science and linguistics, having received my master's degree from University of Washington and my
 									bachelor's from University of Wisconsin-Madison. <br><br>
 									
-									My main research interests are in sentence processing and (morpho-)syntactic theory of Japanese, Korean, and Chinese.
-									Outside of work, I love listening to music (esp. jazz, flamenco, etc.)	and	playing PC games.
+									My main research interests are in sentence processing and syntactic theory of Japanese, Korean, and Chinese.
+									Outside of work, I love listening/playing music (esp. jazz, flamenco, funk), history, and playing PC games.
 								</p>
 							</article>
 
