--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt=""></span>
 								<h2 class="major">About</h2>
 								<p>
-									I'm a PhD student in linguistics at Northwestern University. My main research foci are in computational psycholinguistics, morphosyntax, and East-Asian languages.
+									I'm a PhD student in linguistics at Northwestern University. My main research interests are in computational psycholinguistics, (morpho-)syntax, and East-Asian languages.
 									I also teach and/or TA undergraduate and graduate classes in linguistics and ESL. My background is in both linguistics and computer science. I completed my BS at UW-Madison and my MS at University of Washington.<br><br>
 									
 									Outside of work my two favorite things are probably video games and playing music. I'm a big fan of strategy and cooperative games (tactical shooters, RTS, etc.).
