--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<div class="inner">
 								<h1>Devin Johnson</h1><br>
 								<h2>張旭堯</h2>
-								<p> Linguist</p>
+<!-- 								<p> Linguist</p> -->
 <!-- 								<ul class="icons">
 									<li><a href="https://scholar.google.com/citations?user=JTeQM9AAAAAJ&hl=en" class="fas fa-graduation-cap"></a></li>
 									<li><a href="mailto:devinj1121@gmail.com" class="fa fa-envelope"></a></li>
