--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Devin Johnson</h1><br>
-								<h2>張旭堯</h2>
+								<h2>Linguist</h2>
 <!-- 								<p> Linguist</p> -->
 <!-- 								<ul class="icons">
 									<li><a href="https://scholar.google.com/citations?user=JTeQM9AAAAAJ&hl=en" class="fas fa-graduation-cap"></a></li>
