--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Devin Johnson</h1><br>
-								<h2>Linguist</h2>
-<!-- 								<p> Linguist</p> -->
-<!-- 								<ul class="icons">
+<!-- 								<h2>Linguist</h2> -->
+								<p> Linguist</p>
+								<ul class="icons">
 									<li><a href="https://scholar.google.com/citations?user=JTeQM9AAAAAJ&hl=en" class="fas fa-graduation-cap"></a></li>
 									<li><a href="mailto:devinj1121@gmail.com" class="fa fa-envelope"></a></li>
-								</ul> -->
+								</ul>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">About</a></li>
-								<li><a href="mailto:devinj1121@gmail.com">Contact</a></li>
+<!-- 								<li><a href="mailto:devinj1121@gmail.com">Contact</a></li> -->
 							</ul>
 						</nav>
 					</header>
@@ -45,11 +45,14 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt=""></span>
 								<h2 class="major">About</h2>
 								<p>
-									I'm a PhD student in linguistics at Northwestern University. My main research interests are in computational psycholinguistics, (morpho-)syntax, and East-Asian languages.
-									I also teach and/or TA undergraduate and graduate classes in linguistics and ESL. My background is in both linguistics and computer science. I completed my BS at UW-Madison and my MS at University of Washington.<br><br>
+									I'm a PhD student in linguistics at Northwestern University. My main research interests are in morphosyntax, computational psycholinguistics, and Japanese.
+									In other words, I first want to understand the tacit knowledge people have about what a word is and how to combine words/their parts. For example, why is "fan-f****ing-tastic" ok,
+									but not "fanta-fu*****-stic"? Secondly, I want to computationally modelling how words are processed in realtime during reading - that is, how do people actually use the knowledge
+									they have? <br><br>
 									
-									Outside of work my two favorite things are probably video games and playing music. I'm a big fan of strategy and cooperative games (tactical shooters, RTS, etc.).
-									As for music, my favorite genre has been jazz for a long time, but really I listen to just about all genres.
+									I also teach and/or TA undergraduate and graduate classes in linguistics and ESL. My background is in both linguistics and computer science.
+									I completed my BS at UW-Madison and my MS at University of Washington.<br><br> Outside of work my two favorite things are probably video games and playing music. 
+									I'm a big fan of strategy, management, and cooperative games. As for music, my favorite genre has been jazz for a long time, but really I listen to just about all genres.
 								</p>
 							</article>
 
