--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<p>
 									I'm a PhD student in linguistics at Northwestern University. My main research interests are in morphosyntax, computational psycholinguistics, and Japanese.
 									In other words, I first want to understand the tacit knowledge people have about what a word is and how to combine words/their parts. For example, why is "fan-f****ing-tastic" ok,
-									but not "fanta-fu*****-stic"? Secondly, I want to computationally modelling how words are processed in realtime during reading - that is, how do people actually use the knowledge
+									but not "fanta-fu*****-stic"? Secondly, I want to computationally model how words are processed in realtime during reading - that is, how do people actually use the knowledge
 									they have? <br><br>
 									
 									I also teach and/or TA undergraduate and graduate classes in linguistics and ESL. My background is in both linguistics and computer science.
