--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt=""></span>
 								<h2 class="major">About</h2>
 								<p>
-									I'm a PhD student in linguistics at Northwestern University. My main research interests are in morphosyntax, computational psycholinguistics, and Japanese.
+									I'm a PhD student in linguistics at Northwestern University with background in both linguistics and computer science. My main research interests are in morphosyntax, computational psycholinguistics, and Japanese.
 									In other words, I first want to understand the tacit knowledge people have about what a word is and how to combine words/their parts. For example, why is "fan-f****ing-tastic" ok,
 									but not "fanta-fu*****-stic"? Secondly, I want to computationally model how words are processed in realtime during reading - that is, how do people actually use the knowledge
 									they have? <br><br>
 									
-									I also teach and/or TA undergraduate and graduate classes in linguistics and ESL. My background is in both linguistics and computer science.
-									I completed my BS at UW-Madison and my MS at University of Washington.<br><br> Outside of work my two favorite things are probably video games and playing music. 
+									Outside of work my two favorite things are probably video games and playing music. 
 									I'm a big fan of strategy, management, and cooperative games. As for music, my favorite genre has been jazz for a long time, but really I listen to just about all genres.
 								</p>
 							</article>
