--- a/index.html
+++ b/index.html
@@ -45,13 +45,9 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt=""></span>
 								<h2 class="major">About</h2>
 								<p>
-									I'm a PhD student in linguistics at Northwestern University with background in both linguistics and computer science. My main research interests are in morphosyntax, computational psycholinguistics, and Japanese.
-									In other words, I first want to understand the tacit knowledge people have about what a word is and how to combine words/their parts (i.e., grammar). For example, why is "fan-f****ing-tastic" ok,
-									but not "fanta-fu*****-stic"? Secondly, I want to computationally model how words are processed in realtime during reading (i.e., parsing) to understand how people actually use the knowledge
-									they have. <br><br>
-									
-									Outside of work my two favorite things are probably video games and playing music. 
-									I'm a big fan of strategy, management, and cooperative games. As for music, my favorite genre has been jazz for a long time, but really I listen to just about all genres.
+									I'm a PhD student in linguistics at Northwestern University with background in both linguistics and computer science. My main work is in computational psycholinguistics, specifically in the processing
+									of morphosyntax. In other words, I first want to understand the tacit knowledge people have about words and how to combine them (i.e., grammar). Secondly, I want to computationally model how people actually
+									put this knowledge to use when they are comprehending words/a sentence (i.e., parsing). <br><br> Outside of work, I love working on various math problems, being in the forest, video games, and music.
 								</p>
 							</article>
 
