--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<p>
 									I'm a PhD student in linguistics at Northwestern University with background in both linguistics and computer science. My main work is in computational psycholinguistics, specifically in the processing
 									of morphosyntax. In other words, I first want to understand the tacit knowledge people have about words and how to combine them (i.e., grammar). Secondly, I want to computationally model how people actually
-									put this knowledge to use when they are comprehending words/a sentence (i.e., parsing). <br><br> Outside of work, I love working on various math problems, being in the forest, video games, and music.
+									put this knowledge to use when they are comprehending words/a sentence (i.e., parsing). Outside of work, I love working on various math problems, being in the forest, video games, and music.
 								</p>
 							</article>
 
