--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<h4>Translation</h4>
 										<p>
 										  I offer technical and academic translation, proofreading, editing services.
-										  I currently focus on projects from Chinese, Japanese, and/or Italian into English. Topics I cover include computer software, computer science, linguistics, academic research, video games, psychology, and more. Please contact me to see if your project is a good fit.
+										  I currently focus on projects from Japanese and/or Italian into English. Topics I cover include computer software, computer science, linguistics, academic research, video games, psychology, and more. Please contact me to see if your project is a good fit.
 										</p>
 									  </div>
 									</div>
