--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 									<div class="col-md-6">
 										<div class="service-item">
 										  <div class="first-service-icon service-icon"></div>
-										  <h4>Technical Consulting </h4>
+										  <h4>Technical Consulting</h4>
 										  <p>
-											If you have questions about language technologies (e.g., NLP), language learning, or even something more theoretical, I am happy to help. I have experience in several programming languages and tools such as Python, R, Java, etc. I have also implemented various systems to collect and analyze data.
+											If you have questions about language technologies, language learning, or even something more theoretical, I am happy to help. I have experience in several programming languages and tools such as Python, R, Java, etc., and I have implemented various systems to collect and analyze data.
 										  </p>
 										</div>
 									  </div>
