--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 										  <div class="first-service-icon service-icon"></div>
 										  <h4>Technical Consulting</h4>
 										  <p>
-											If you have questions about language technologies, language learning, or even something more theoretical, I am happy to help. I have experience in several programming languages and tools such as Python, R, Java, etc., and I have implemented various systems to collect and analyze data.
+											If you have questions for a project about programming, language technologies, etc., I am happy to help. I have experience in several programming languages and tools such as Python, R, Java, etc., and I have implemented various systems to collect and analyze data.
 										  </p>
 										</div>
 									  </div>
