--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 								<ul class="icons">
 									<li><a href="https://scholar.google.com/citations?user=JTeQM9AAAAAJ&hl=en" class="fas fa-graduation-cap"></a></li>
 									<li><a href="mailto:devinj1121@gmail.com" class="fa fa-envelope"></a></li>
+									<li><a href="https://github.com/dj1121" class="icon brands fa-github"></a></li>
 								</ul>
 							</div>
 						</div>
@@ -49,13 +50,13 @@
 									
 									Most of my studies now focus on experiments and modelling to see if/how people use the knowledge they have about their language to predict what comes next in a sentence (i.e., prediction). The work extends across various languages, including English, Japanese, Russian, etc.<br><br>
 
-									Besides my research, I do various other things like tutoring, translation and programming. In my free time, I like video games, being in nature, learning mathematics/other languages, and discovering new music. For more details about my services, please take a look <a href="#services">here</a>.
+									Besides my research, I do various other things like tutoring, translation and programming. In my free time, I like video games, being in nature, learning mathematics/other languages, and discovering new music.
 									
 								</p>
 							</article>
 
 						<!-- Services -->
-							<article id="services">							
+							<!-- <article id="services">							
 								<h2 class="major">Services</h2>
 								If you would like to get in touch, please send me an <a href="mailto:devinj1121@gmail.com">email</a>.
 								<div class="row">
@@ -69,15 +70,6 @@
 										</p>
 									  </div>
 									</div>
-									<!-- <div class="col-md-6">
-									  <div class="service-item">
-										<div class="third-service-icon service-icon"></div>
-										<h4>Software</h4>
-										<p>
-										  If you are developing or testing a software project, I would love to be involved. I have experience in several programming languages and tools such as Python, R, Java, etc. I have also implemented various systems to collect and analyze textual data.
-										</p>
-									  </div>
-									</div> -->
 									<div class="col-md-6">
 									  <div class="service-item">
 										<div class="fourth-service-icon service-icon"></div>
@@ -98,7 +90,7 @@
 										  </p>
 										</div>
 									  </div>
-							</article>
+							</article> -->
 
 						<!-- Elements -->
 						<article id="elements">
