--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About</a></li>
-								<li><a href="#services">Services</a></li>
+<!-- 								<li><a href="#services">Services</a></li> -->
 							</ul>
 						</nav>
 					</header>
