--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About</a></li>
-<!-- 								<li><a href="#services">Services</a></li> -->
+								<li><a href="#services">Services</a></li>
+								<li><a href="mailto:devinj1121@gmail.com">Contact</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -46,16 +47,41 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt=""></span>
 								<h2 class="major">About</h2>
 								<p>
-									I'm a PhD student in linguistics at Northwestern University with background in both linguistics and computer science. My work combines syntactic theory with psycholinguistics to study the mechanisms of human sentence processing. In other words, what knowledge do people have about words and how they can combine into sentences (i.e., syntax)? Additionally, how does the mind put this knowledge to use in real time in order to comprehend sentences (i.e., processing)?<br><br>
+									I'm a doctoral researcher in linguistics at Northwestern University with background in both linguistics and computer science. My work combines syntactic theory with psycholinguistics to study the mechanisms of human sentence processing. In other words, what knowledge do people have about words and how they can combine into sentences (i.e., syntax)? Additionally, how does the mind put this knowledge to use in real time in order to comprehend sentences (i.e., processing)?<br><br>
 									
 									Most of my studies now focus on experiments and modelling to see if/how people use the knowledge they have about their language to predict what comes next in a sentence (i.e., prediction). The work extends across various languages, including English, Japanese, Russian, etc.<br><br>
 
-									Besides my research, I do various other things like tutoring, translation and programming. In my free time, I like video games, being in nature, learning mathematics/other languages, and discovering new music.
+									Besides my research, I do various other things like tutoring, translation and programming. In my free time, I like video games, being in nature, learning mathematics/other languages, and discovering new music. For more on
+									the services I can provide, check <a href="#services">here</a>.
 									
 								</p>
 							</article>
 
 						<!-- Services -->
+						<article id="services">
+							<span class="image main"><img src="images/book.jpg" alt=""></span>
+							<h2 class="major">Services</h2>
+							<p>
+								If you have any questions about my services,
+								please don't hesitate to <a href="mailto:devinj1121@gmail.com">contact me</a>.<br>
+
+								<h3>Translation</h3>
+								I am currently seeking projects primarily in Japanese -> English.<br>
+								<ul>
+									<li>Technical and scientific translation, proofreading, and editing.</li>
+									<li>Computer science, software, linguistics, cognitive science, AI, video games, etc.</li>
+									<li>MemoQ, Microsoft Office</li>
+								</ul>
+
+								<h3>Tutoring</h3>
+								I am currently accepting new students.<br>
+								<ul>
+									<li>Undergraduate and high school levels</li>
+									<li>English, math, foreign languages, computer science, college applications</li>
+									<li>Certified TEFL/TESOL instructor</li>
+								</ul>						
+							</p>
+						</article>
 							<!-- <article id="services">							
 								<h2 class="major">Services</h2>
 								If you would like to get in touch, please send me an <a href="mailto:devinj1121@gmail.com">email</a>.
