--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 									<li><a href="https://scholar.google.com/citations?user=JTeQM9AAAAAJ&hl=en" class="fas fa-graduation-cap"></a></li>
 									<li><a href="mailto:devinj1121@gmail.com" class="fa fa-envelope"></a></li>
 									<li><a href="https://github.com/dj1121" class="icon brands fa-github"></a></li>
+									<li><a href="https://www.linkedin.com/in/devin-johnson-6987b8289/" class="icon brands fa-linkedin"></a></li>
 								</ul>
 							</div>
 						</div>
