--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								please don't hesitate to <a href="mailto:devinj1121@gmail.com">contact me</a>.<br>
 
 								<h3>Translation</h3>
-								I am accepting projects from Japanese/Chinese/German/Italian -> English<br>
+								I am accepting projects from Japanese/Chinese/German -> English<br>
 								<ul>
 									<li>Technical and scientific translation, proofreading, and editing.</li>
 									<li>Computer science, software, linguistics, cognitive science, AI, video games, etc.</li>
