--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								please don't hesitate to <a href="mailto:devinj1121@gmail.com">contact me</a>.<br>
 
 								<h3>Translation</h3>
-								I am accepting projects from Japanese/Chinese -> English.<br>
+								I am accepting projects from Japanese -> English.<br>
 								<ul>
 									<li>Translation, proofreading, and editing</li>
 									<li>Expertise in technical/scientific texts</li>
