--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<h2 class="major">Services</h2>
 							<p>
 								If you have any questions about my services,
-								please don't hesitate to <a href="mailto:devinj1121@gmail.com">contact me</a>.<br>
+								please don't hesitate to <a href="mailto:devin@dj-translations.com">contact me</a>.<br>
 
 								<h3>Translation (it,ja > en)</h3>
 								<ul>
