--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 								<h1>Devin Ronsini-Johnson</h1><br>
 								<p>Computational Linguist<br>Technical Translator (it,ja > en)</p>
 								<ul class="icons">
-									<li><a href="https://scholar.google.com/citations?user=JTeQM9AAAAAJ&hl=en" class="fas fa-graduation-cap"></a></li>
+									<!-- <li><a href="https://scholar.google.com/citations?user=JTeQM9AAAAAJ&hl=en" class="fas fa-graduation-cap"></a></li> -->
 									<li><a href="mailto:devin@dj-translations.com" class="fa fa-envelope"></a></li>
 									<li><a href="https://github.com/devinj1121" class="icon brands fa-github"></a></li>
 									<li><a href="https://www.linkedin.com/in/dt-johnson/" class="icon brands fa-linkedin"></a></li>
