--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Devin Ronsini-Johnson</h1><br>
-								<p>Computational Linguist<br>Technical Translator (it,ja > en)</p>
+								<p>Linguist<br>Translator (it,ja > en)</p>
 								<ul class="icons">
 									<!-- <li><a href="https://scholar.google.com/citations?user=JTeQM9AAAAAJ&hl=en" class="fas fa-graduation-cap"></a></li> -->
 									<li><a href="mailto:devin@dj-translations.com" class="fa fa-envelope"></a></li>
 									<li><a href="https://github.com/devinj1121" class="icon brands fa-github"></a></li>
 									<li><a href="https://www.linkedin.com/in/dt-johnson/" class="icon brands fa-linkedin"></a></li>
+									<!-- <li><a href="https://dtjohn.blogspot.com/" class="icon brands fa-blogger"></a></li> -->
 								</ul>
 							</div>
 						</div>
@@ -34,7 +35,7 @@
 							<ul>
 								<li><a href="#intro">Research</a></li>
 								<li><a href="#services">Services</a></li>
-								<li><a href="mailto:devin@dj-translations.com">Contact</a></li>
+								<!-- <li><a href="...">Photography</a></li> -->
 							</ul>
 						</nav>
 					</header>
@@ -57,7 +58,7 @@
 
 						<!-- Services -->
 						<article id="services">
-							<span class="image main"><img src="images/book.jpg" alt=""></span>
+							<span class="image main"><img src="images/book.jpg" alt=""></span><br>
 							<h2 class="major">Services</h2>
 							<p>
 								If you have any questions about my services,
@@ -67,7 +68,7 @@
 								<ul>
 									<li>Translation from Italian and Japanese into native English</li>
 									<li>Specialized in technical texts in science, math, and IT</li>
-									<li>Leverage several years of research experience in computer science and linguistics</li>
+									<li>Leverage several years of scientific research experience</li>
 									<li>Handle content such as patents, manuals, research papers, and more</li>
 								</ul>
 
