--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Devin Ronsini-Johnson</h1><br>
-								<p>Linguist<br>Translator (it,ja > en)</p>
+								<p>Linguist<br>Technical Translator (it,ja > en)</p>
 								<ul class="icons">
 									<!-- <li><a href="https://scholar.google.com/citations?user=JTeQM9AAAAAJ&hl=en" class="fas fa-graduation-cap"></a></li> -->
 									<li><a href="mailto:devin@dj-translations.com" class="fa fa-envelope"></a></li>
