--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Devin Ronsini-Johnson</title> 
+		<title>Devin Johnson</title> 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link type="image/png" sizes="16x16" rel="icon" href="images/favicon.png">
@@ -20,8 +20,8 @@
 					<header id="header">
 						<div class="content">
 							<div class="inner">
-								<h1>Devin Ronsini-Johnson</h1><br>
-								<p>Linguist<br>Technical Translator (it,ja > en)</p>
+								<h1>Devin Johnson</h1><br>
+								<p>Linguist<br>Translator (ja,zh > en)</p>
 								<ul class="icons">
 									<!-- <li><a href="https://scholar.google.com/citations?user=JTeQM9AAAAAJ&hl=en" class="fas fa-graduation-cap"></a></li> -->
 									<li><a href="mailto:devin@dj-translations.com" class="fa fa-envelope"></a></li>
@@ -64,10 +64,10 @@
 								If you have any questions about my services,
 								please don't hesitate to <a href="mailto:devin@dj-translations.com">contact me</a>.<br>
 
-								<h3>Translation (it,ja > en)</h3>
+								<h3>Translation (ja,zh > en)</h3>
 								<ul>
-									<li>Translation from Italian and Japanese into native English</li>
-									<li>Specialized in technical texts in science, math, and IT</li>
+									<li>Translation from Chinese (Trad.) and Japanese into native English</li>
+									<li>Specialized in technical texts in science and tech</li>
 									<li>Leverage several years of scientific research experience</li>
 									<li>Handle content such as patents, manuals, research papers, and more</li>
 								</ul>
